--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@
 # Remember to add API_TOKEN_GITHUB in repo Settings > Secrets as well!
 env:
   githubEmail: ${{ secrets.EMAIL }}
-  deployToRepo: atomicfeast.github.io/space-tourism
+  deployToRepo: atomicfeast.github.io
 
 name: Github Pages Astro CI
 
