--- a/package.json
+++ b/package.json
@@ -10,21 +10,23 @@
     "commit": "cz"
   },
   "devDependencies": {
-    "astro": "^0.22.11",
     "commitizen": "^4.2.4",
     "cz-conventional-changelog": "3.3.0",
     "postcss": "^8.4.5",
     "postcss-scss": "^4.0.3",
-    "sass": "^1.49.4",
     "stylelint": "^14.2.0",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
-    "yarn": "^1.22.17"
+    "stylelint-scss": "^4.1.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "dependencies": {
+    "astro": "^0.24.0",
+    "sass": "^1.49.9",
+    "yarn": "^1.22.17"
   }
 }
