--- a/package.json
+++ b/package.json
@@ -15,18 +15,20 @@
     "postcss": "^8.4.5",
     "postcss-scss": "^4.0.3",
     "stylelint": "^14.2.0",
+    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-standard-scss": "^3.0.0",
     "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0"
-  },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+    "stylelint-scss": "^4.1.0",
+    "typescript": "^4.6.2"
   },
   "dependencies": {
     "astro": "^0.24.0",
     "sass": "^1.49.9",
     "yarn": "^1.22.17"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
