--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "devDependencies": {
     "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "3.3.0",
+    "cz-conventional-changelog": "^3.0.1",
     "postcss": "^8.4.5",
     "postcss-scss": "^4.0.3",
     "stylelint": "^14.2.0",
@@ -22,7 +22,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "astro": "^0.24.0",
+    "astro": "^1.0.0-beta.5",
     "sass": "^1.49.9",
     "yarn": "^1.22.17"
   },
