--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript": "^4.6.2"
   },
   "dependencies": {
-    "astro": "^0.24.0",
+    "astro": "^1.0.0-beta.5",
     "sass": "^1.49.9",
     "yarn": "^1.22.17"
   },
