--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Deploy Astro to GitHub Pages
+name: Deploy React To GitHub Pages
 
 on:
   push:
@@ -14,19 +14,19 @@ jobs:
         node-version: [16.x]
 
     steps:
-      - name: Get files
+      - name: Get Files
         uses: actions/checkout@v2
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v2
         with:
           node-version: ${{ matrix.node-version }}
-      - name: Install packages
+      - name: Install Packages
         run: yarn
-      - name: Build project
+      - name: Build Project
         run: yarn build
       - name: Add .nojekyll file
         run: touch ./dist/.nojekyll
-      - name: Deploy to GitHub Pages
+      - name: Deploy To GitHub Pages
         uses: JamesIves/github-pages-deploy-action@v4.2.3
         with:
           branch: gh-pages
