--- a/package.json
+++ b/package.json
@@ -1,34 +1,23 @@
 {
-  "name": "astro-stack",
-  "version": "0.0.1",
+  "name": "space-tourism",
   "private": false,
+  "version": "0.0.0",
   "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview",
-    "commit": "cz"
-  },
-  "devDependencies": {
-    "commitizen": "^4.2.4",
-    "cz-conventional-changelog": "^3.0.1",
-    "postcss": "^8.4.5",
-    "postcss-scss": "^4.0.3",
-    "stylelint": "^14.2.0",
-    "stylelint-config-prettier": "^9.0.3",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0",
-    "typescript": "^4.6.2"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "astro": "^1.0.0-beta.18",
-    "sass": "^1.49.9",
-    "yarn": "^1.22.17"
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-router-dom": "6"
   },
-  "config": {
-    "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
-    }
+  "devDependencies": {
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^1.3.0",
+    "sass": "^1.51.0",
+    "typescript": "^4.6.3",
+    "vite": "^2.9.9"
   }
 }
